# DynWMIS

./: CMakeLists.txt  LICENSE  README.md  compile_withcmake.sh
app/: dynwmis.cpp  metis_to_sequence.cpp  parse_parameters.h
deploy/: convert_metis_seq
examples/: 3elt.graph.seq  4elt.graph.seq  add20.graph.seq  add32.graph.seq  email-EuAll.graph.seq
img/: generate-social-preview.py
lib/: DynWMISConfig.h  definitions_wmis.h
lib/algorithms/: DynamicAlgorithmMeta.h  dyn_wmis_algorithm.h  dyn_wmis_bfs.cpp  dyn_wmis_bfs.h  dyn_wmis_greedy.cpp  dyn_wmis_greedy.h  dyn_wmis_greedy_deg.cpp  dyn_wmis_greedy_deg.h  dyn_wmis_simple.cpp  dyn_wmis_simple.h  dyn_wmis_static.cpp  dyn_wmis_static.h  mis_branch_and_reduce_algorithm.cpp  mis_branch_and_reduce_algorithm.h  modified.cpp  modified.h  solve_static_wmis.cpp  solve_static_wmis.h
lib/data_structure/: dyn_graph_access.cpp  dyn_graph_access.h
lib/io/: ;  mwis_graph_io.cpp  mwis_graph_io.h
lib/tools/: algorithm_factory.h  more_hasher.h  random_functions.h
lib/tools/depr/: PerformanceMetrics.cpp  PerformanceMetrics.h  bfs.h
